# HPC

./: .gitignore
Lab1/: CMakeLists.txt
Lab1/naive_time/: MakeRandomVector.hpp  a.out  main.cpp
Lab1/src/: BenchmarkDemo.cpp
Lab2/: CMakeLists.txt
Lab2/src/: BenchmarkExample.cpp  Goto.cpp
Lab3/: CMakeLists.txt
Lab3/code/: 01.asm  01a_vec_mult2.cpp  01b_vec_quad.cpp  01c_vec_quad_unaligned.cpp  01d_vec_quad_aligned.cpp  02a_pure.cpp  02b_intrin.cpp  02c_intrin_optimized.cpp  CMakeLists.txt  MultSliverSliverOptimized.cpp
Lab3/include/: MakeRandomVector.hpp
Lab3/src/: BenchmarkExample.cpp  Goto.cpp
Lab4/TBB/: CMakeLists.txt  results.txt  serial.cpp  tbb_false_sharing.cpp  tbb_parallel_for.cpp  tbb_parallel_reduce.cpp
Lab4/advection_explicit/: .advection_implicit_parallel.cpp.swp  CMakeLists.txt  Linear advection.ipynb  Speedup plots.ipynb  Untitled.ipynb  advection_explicit_parallel.cpp  advection_explicit_serial.cpp  advection_explicit_serial_0.cpp  advection_implicit_parallel.cpp  advection_implicit_serial.cpp  advection_implicit_serial_0.cpp  advection_serial.cpp
Lab4/threads/: README.md  makethreads  thread2.cpp  thread3.cpp
Lab6/MPI_1/: CMakeLists.txt  MakeRandomVector.hpp  mpi_basic_hello_world.cpp  mpi_basic_send_recive.cpp  mpi_basic_send_recive_circle.cpp  mpi_collective_barrier.cpp  mpi_collective_bcast.cpp  mpi_collective_reduce.cpp  mpi_collective_scatter_gather.cpp
Lab6/MPI_2/: CMakeLists.txt  mpi_benchmark.cpp  mpi_impl.cpp  serial_benchmark.cpp  serial_impl.cpp
Lab6/MPI_3/: CMakeLists.txt  advection_explicit_mpi.cpp
Lab6/MPI_3_solution/: CMakeLists.txt  advection_explicit_mpi.cpp
